network/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: my-endpoint
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.100
    ports:
      - port: 80
