network/services-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: m-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 80  
    nodePort: 30080
